--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "socket-io-game",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js"
   },
@@ -12,6 +12,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "nodemon": "^2.0.20",
-    "socket.io": "^4.6.0"
+    "socket.io": "^4.6.0",
+    "tmx-parser": "^1.5.0"
   }
 }
