--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
+    "mysql": "^2.18.1",
+    "mysql-await": "^2.2.3",
     "nodemon": "^2.0.20",
     "socket.io": "^4.6.0",
     "tmx-parser": "^1.5.0"
